Use the included jre